--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <h1>What Day is it?</h1>
         <h2 id="currentDate"></h2>
         <p id="message"></p>
-        <button onclick="displayDate() ; setBg()">Click for date!!</button>
+        <div class="buttons">
+            <button onclick="displayDate() ; setBg()">Click for date!!</button>
+            <button onclick="refreshPage()">Refresh</button>
+
+        </div>
 
     
     </div>
